--- a/front/index.html
+++ b/front/index.html
@@ -4,7 +4,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,500,700|Material+Icons' rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, minimal-ui">
-    <title>BPLeague</title>
+    <title>signa</title>
   </head>
   <body>
     <div id="app"></div>
